fixed mywork link on splash page, increased footer z-index to make it visible

--- a/style.css
+++ b/style.css
@@ -11,8 +11,6 @@ body {
   min-height: 100vh;
   flex-direction: column;
   padding-top: 100%;
-  /* background-image: url("img/background.jpg");
-  background-size: cover; */
 }
 
 .intro {
@@ -25,7 +23,7 @@ body {
   display: table;
   top: 0;
   position: fixed;
-  z-index: -10;
+  z-index: 0;
 }
 
 main, .main-nav {
@@ -37,7 +35,7 @@ main, .main-nav {
   vertical-align: middle;
   text-align: center;
   padding-top: 12%;
-  padding-bottom: 25%;
+  padding-bottom: 28%;
 }
 
 .content h1 {
@@ -70,7 +68,7 @@ main, .main-nav {
   padding: 10px 20px;
   border-radius: 5px;
   margin: 200px;
-  z-index: 200;
+  z-index: 20;
 }
 
 .mylink:hover {
@@ -190,6 +188,11 @@ textarea {
 }
 
 /* Footer */
+
+footer {
+  z-index: 10;
+}
+
 .page-footer {
   background: #4E7950;
 }
